<?xml version="1.0" encoding="utf-8"?>
<com.example.testapp.presentation.root.find_flights.FindFlightsView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/find_flights"
        app:titleTextColor="@color/white" />

    <View
        android:id="@+id/toolbar_underline"
        android:layout_width="0dp"
        android:layout_height="@dimen/double_divider_size"
        android:background="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls"
        android:padding="@dimen/view_padding_medium"
        app:layout_constraintBottom_toTopOf="@+id/button_container"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_underline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/card_elevation"
                app:cardBackgroundColor="@color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/view_padding_min_plus">

                    <ImageView
                        android:id="@+id/plane_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:rotation="180"
                        android:src="@drawable/ic_plane"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/location_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:src="@drawable/ic_location"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="@dimen/dashed_line_width"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/text_margin_micro"
                        android:background="@drawable/dashed_line"
                        app:layout_constraintBottom_toTopOf="@+id/location_icon"
                        app:layout_constraintEnd_toEndOf="@+id/plane_icon"
                        app:layout_constraintStart_toStartOf="@+id/plane_icon"
                        app:layout_constraintTop_toBottomOf="@+id/plane_icon" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/view_margin_medium"
                        android:layout_marginEnd="@dimen/view_margin_medium"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/plane_icon"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/from_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/from"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_big"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/vOrigin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/text_margin_min"
                            android:clickable="true"
                            android:ellipsize="end"
                            android:focusable="true"
                            android:hint="@string/flying_from"
                            android:lines="1"
                            android:paddingTop="@dimen/text_padding_min"
                            android:paddingBottom="@dimen/text_padding_min"
                            android:textColor="@color/primaryDark"
                            android:textColorHint="@color/primaryLight"
                            android:textSize="@dimen/text_size_large"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/vOriginCode"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/from_title" />

                        <TextView
                            android:id="@+id/vOriginCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:ellipsize="end"
                            android:focusable="true"
                            android:lines="1"
                            android:paddingTop="@dimen/text_padding_min"
                            android:paddingBottom="@dimen/text_padding_min"
                            android:textColor="@color/primaryDark"
                            android:textSize="@dimen/text_size_large"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/vOrigin"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/vOrigin"
                            tools:text="STL" />

                        <View
                            android:id="@+id/divider"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/divider_size"
                            android:layout_marginBottom="@dimen/view_margin_min"
                            android:alpha="0.4"
                            android:background="@color/icon_gray"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/vOrigin" />

                        <TextView
                            android:id="@+id/to_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/view_margin_min"
                            android:text="@string/to"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_big"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/divider" />

                        <TextView
                            android:id="@+id/vDestination"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/text_margin_min"
                            android:clickable="true"
                            android:ellipsize="end"
                            android:focusable="true"
                            android:hint="@string/going_to"
                            android:lines="1"
                            android:paddingTop="@dimen/text_padding_min"
                            android:paddingBottom="@dimen/text_padding_min"
                            android:textColor="@color/primaryDark"
                            android:textColorHint="@color/primaryLight"
                            android:textSize="@dimen/text_size_large"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/vDestinationCode"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/to_title" />

                        <TextView
                            android:id="@+id/vDestinationCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:ellipsize="end"
                            android:focusable="true"
                            android:lines="1"
                            android:paddingTop="@dimen/text_padding_min"
                            android:paddingBottom="@dimen/text_padding_min"
                            android:textColor="@color/primaryDark"
                            android:textSize="@dimen/text_size_large"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/vDestination"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/vDestination"
                            tools:text="STL" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_medium"
                android:elevation="@dimen/card_elevation"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/view_padding_large"
                    android:paddingTop="@dimen/view_padding_min_plus"
                    android:paddingEnd="@dimen/view_padding_min_plus"
                    android:paddingBottom="@dimen/view_padding_min_plus">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fly_out"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_big" />

                    <TextView
                        android:id="@+id/vDepartureDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:ellipsize="end"
                        android:focusable="true"
                        android:hint="@string/select_date"
                        android:lines="1"
                        android:paddingTop="@dimen/text_padding_min"
                        android:paddingBottom="@dimen/text_padding_min"
                        android:textColor="@color/primaryDark"
                        android:textColorHint="@color/mediumGray"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_medium"
                android:elevation="@dimen/card_elevation"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/view_padding_large"
                    android:paddingTop="@dimen/view_padding_min_plus"
                    android:paddingEnd="@dimen/view_padding_min_plus"
                    android:paddingBottom="@dimen/view_padding_min_plus">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passengers"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_big" />

                    <TextView
                        android:id="@+id/vPassengers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:lineSpacingMultiplier="1.5"
                        android:paddingTop="@dimen/text_padding_min"
                        android:paddingBottom="@dimen/text_padding_min"
                        android:textColor="@color/primaryDark"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold"
                        tools:text="1 Adult (16+ years)" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="@dimen/view_padding_medium"
        android:paddingTop="@dimen/view_padding_min"
        android:paddingEnd="@dimen/view_padding_medium"
        android:paddingBottom="@dimen/view_padding_min"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/vSearchFlights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_selector"
            android:padding="@dimen/view_padding_min_plus"
            android:text="@string/lets_go"
            android:textAllCaps="false"
            android:textColor="@color/primaryDark"
            android:textSize="@dimen/text_size_large_plus"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/vProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_a90"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</com.example.testapp.presentation.root.find_flights.FindFlightsView>